<resources>
    <string name="app_name">TED_APP</string>
    <string name="txt_btn_home_etudiants">Etudiants</string>
    <string name="txt_btn_home_rayons">Rayons</string>
    <string name="txt_btn_etudiant_louis">Louis Escartin</string>
    <string name="txt_btn_etudiant_romain">Romain Diolot</string>
    <string name="txt_btn_etudiant_thibault">Thibault Thieuleux</string>
    <string name="txt_header_lading_page">Epsi</string>
    <string name="txt_header_student_page">Infos</string>
    <string name="txt_header_category_page">Rayons</string>
    <string name="txt_header_product_page">Produits</string>
    <string name="student_name">Nom etudiant</string>
    <string name="student_email">Email etudiant</string>
    <string name="student_group">Groupe etudiant</string>
    <string name="student_img_url">URL image etudiant</string>
    <string name="urlEpsi">https://www.epsi.fr/</string>

</resources>