<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StudentDetailActivity">
    <include
        layout="@layout/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.cardview.widget.CardView
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:cardCornerRadius="10dp"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/imageViewDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"/>
    </androidx.cardview.widget.CardView>
    
    <TextView
        android:id="@+id/nameViewDetail"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/student_name"/>

    <TextView
        android:id="@+id/emailViewDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/student_email"/>

    <TextView
        android:id="@+id/groupViewDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/student_group"/>

    <TextView
        android:id="@+id/urlEpsi"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/urlEpsi"
        android:autoLink="web"/>


</LinearLayout>