<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EtudiantActivity"
    android:orientation="vertical">

    <include
        layout="@layout/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/button_etudiant_louis"
                style="@style/ButtonEtudiantEdit"
                android:text="@string/txt_btn_etudiant_louis" />

            <Button
                android:id="@+id/button_etudiant_romain"
                android:layout_marginTop="50dp"
                style="@style/ButtonEtudiantEdit"
                android:text="@string/txt_btn_etudiant_romain" />

            <Button
                android:id="@+id/button_etudiant_thibault"
                style="@style/ButtonEtudiantEdit"
                android:layout_marginTop="50dp"
                android:text="@string/txt_btn_etudiant_thibault" />

        </LinearLayout>

    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>